# hybrid-rag-kb

./: .dockerignore  .gitignore  Dockerfile  README.md  TECHNICAL_DOCUMENTATION.md  docker-compose.yml  hrag  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  security.yml  tests.yml
app/: main.py
app/api/: routes.py  routes_chat.py  routes_chunks.py  routes_debug.py  routes_debug_citations.py  routes_ingest.py  routes_stats.py
app/core/: config.py
app/db/: schema.sql
app/rag/: bm25_fts.py  citations.py  hybrid_fusion.py  ingest.py  loaders.py  memory.py  qa.py  vectorstore.py
cli/: __init__.py  __main__.py  main.py
cli/commands/: __init__.py  base.py  chunks.py  debug.py  doctor.py  help.py  ingest.py  model.py  query.py  reset.py  start.py  stats.py
cli/core/: __init__.py  api_client.py  config.py
cli/ui/: __init__.py  animations.py  console.py  logo.py  panels.py  spinners.py  theme.py
cli/utils/: __init__.py  completions.py  history.py
src/: main.py
src/api/: model_config.py  routes.py  routes_chat.py  routes_chunks.py  routes_debug.py  routes_debug_citations.py  routes_ingest.py  routes_models.py  routes_stats.py
src/core/: config.py
src/db/: sqlite.py
src/rag/: bm25_fts.py  chunking.py  citations.py  embeddings.py  hybrid_fusion.py  ingest.py  loaders.py  memory.py  qa.py  vectorstore.py
tests/: conftest.py  test_chunking.py  test_citations.py  test_hybrid_fusion.py  test_vectorstore.py
